--- a/src/03-pokemon/index.pug
+++ b/src/03-pokemon/index.pug
@@ -8,7 +8,15 @@ html(lang="en")
 
   body
     .weedle
+      .weedle__body.weedle__body--7
+      .weedle__body.weedle__body--6
+      .weedle__body.weedle__body--5
+      .weedle__body.weedle__body--4
+      .weedle__body.weedle__body--3
+      .weedle__body.weedle__body--2
+      .weedle__body.weedle__body--1
       .weedle__head
+        .weedle__eye.weedle__eye--left
+        .weedle__eye.weedle__eye--right
         .weedle__nose
-      .weedle__body
-
+        .weedle__horn
