--- a/src/03-pokemon/index.pug
+++ b/src/03-pokemon/index.pug
@@ -8,6 +8,7 @@ html(lang="en")
 
   body
     .weedle
+      .weedle__tail
       .weedle__body.weedle__body--7
       .weedle__body.weedle__body--6
       .weedle__body.weedle__body--5
