Nearly finished Gastly

--- a/src/03-pokemon/index.pug
+++ b/src/03-pokemon/index.pug
@@ -4,20 +4,34 @@ html(lang="en")
     meta(charset="UTF-8")
     title CSS Pokemon
     link(rel="stylesheet" href="styles.css")
+    link(rel="stylesheet" href="weedle.css")
+    link(rel="stylesheet" href="gastly.css")
     meta(name="viewport" content="width=device-width, initial-scale=1")
 
   body
-    .weedle
-      .weedle__tail
-      .weedle__body.weedle__body--7
-      .weedle__body.weedle__body--6
-      .weedle__body.weedle__body--5
-      .weedle__body.weedle__body--4
-      .weedle__body.weedle__body--3
-      .weedle__body.weedle__body--2
-      .weedle__body.weedle__body--1
-      .weedle__head
-        .weedle__eye.weedle__eye--left
-        .weedle__eye.weedle__eye--right
-        .weedle__nose
-        .weedle__horn
+    // audio(autoplay)
+    //   source(src="pokemon.opus" type="audio/ogg")
+
+    // .weedle
+    //   .weedle__tail
+    //   .weedle__body.weedle__body--7
+    //   .weedle__body.weedle__body--6
+    //   .weedle__body.weedle__body--5
+    //   .weedle__body.weedle__body--4
+    //   .weedle__body.weedle__body--3
+    //   .weedle__body.weedle__body--2
+    //   .weedle__body.weedle__body--1
+    //   .weedle__head
+    //     .weedle__eye.weedle__eye--left
+    //     .weedle__eye.weedle__eye--right
+    //     .weedle__nose
+    //     .weedle__horn
+
+    .gastly
+      .gastly__smoke
+        .gastly__head
+          .gastly__eye.gastly__eye--left
+          .gastly__eye.gastly__eye--right
+          .gastly__mouth
+            .gastly__tooth.gastly__tooth--left
+            .gastly__tooth.gastly__tooth--right
