--- a/src/03-pokemon/index.pug
+++ b/src/03-pokemon/index.pug
@@ -29,9 +29,11 @@ html(lang="en")
 
     .gastly
       .gastly__smoke
-        .gastly__head
-          .gastly__eye.gastly__eye--left
-          .gastly__eye.gastly__eye--right
-          .gastly__mouth
-            .gastly__tooth.gastly__tooth--left
-            .gastly__tooth.gastly__tooth--right
+        .gastly__smoke__ring.gastly__smoke__ring1
+        .gastly__smoke__ring.gastly__smoke__ring2
+      .gastly__head
+        .gastly__eye.gastly__eye--left
+        .gastly__eye.gastly__eye--right
+        .gastly__mouth
+          .gastly__tooth.gastly__tooth--left
+          .gastly__tooth.gastly__tooth--right
