--- a/src/03-pokemon/index.pug
+++ b/src/03-pokemon/index.pug
@@ -12,28 +12,31 @@ html(lang="en")
     // audio(autoplay)
     //   source(src="pokemon.opus" type="audio/ogg")
 
-    .weedle
-      .weedle__tail
-      .weedle__body.weedle__body--7
-      .weedle__body.weedle__body--6
-      .weedle__body.weedle__body--5
-      .weedle__body.weedle__body--4
-      .weedle__body.weedle__body--3
-      .weedle__body.weedle__body--2
-      .weedle__body.weedle__body--1
-      .weedle__head
-        .weedle__eye.weedle__eye--left
-        .weedle__eye.weedle__eye--right
-        .weedle__nose
-        .weedle__horn
+    .battlefield
+      .player1
+        .weedle
+          .weedle__tail
+          .weedle__body.weedle__body--7
+          .weedle__body.weedle__body--6
+          .weedle__body.weedle__body--5
+          .weedle__body.weedle__body--4
+          .weedle__body.weedle__body--3
+          .weedle__body.weedle__body--2
+          .weedle__body.weedle__body--1
+          .weedle__head
+            .weedle__eye.weedle__eye--left
+            .weedle__eye.weedle__eye--right
+            .weedle__nose
+            .weedle__horn
 
-    .gastly
-      .gastly__smoke
-        .gastly__smoke__ring.gastly__smoke__ring1
-        .gastly__smoke__ring.gastly__smoke__ring2
-      .gastly__head
-        .gastly__eye.gastly__eye--left
-        .gastly__eye.gastly__eye--right
-        .gastly__mouth
-          .gastly__tooth.gastly__tooth--left
-          .gastly__tooth.gastly__tooth--right
+      .player2
+        .gastly
+          .gastly__smoke
+            .gastly__smoke__ring.gastly__smoke__ring1
+            .gastly__smoke__ring.gastly__smoke__ring2
+          .gastly__head
+            .gastly__eye.gastly__eye--left
+            .gastly__eye.gastly__eye--right
+            .gastly__mouth
+              .gastly__tooth.gastly__tooth--left
+              .gastly__tooth.gastly__tooth--right
