--- a/src/03-pokemon/weedle.css
+++ b/src/03-pokemon/weedle.css
@@ -1,9 +1,9 @@
 .weedle {
   position: relative;
-  border: 4px dashed #eee;
   height: 400px;
   width: 400px;
-  margin-left: 200px;
+  /* Hacks to correct the bad absolute values that exceed it's bounding box */
+  transform: translate(170px, -70px) scale(0.8);
 }
 
 /*******
@@ -39,8 +39,6 @@
   border-left: 50px solid transparent;
   border-right: 50px solid transparent;
   border-top: 109px solid #e1eee7;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
   border-radius: 50%;
   transform: rotate(139deg);
   position: absolute;
@@ -271,8 +269,6 @@
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   border-top: 48px solid #e1eee7;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
   border-radius: 50%;
   transform: rotate(152deg);
   position: absolute;
