--- a/src/03-pokemon/index.pug
+++ b/src/03-pokemon/index.pug
@@ -14,29 +14,33 @@ html(lang="en")
 
     .battlefield
 
-      .clickzone.clickzone__player1
-        input(type="checkbox")
-        input(type="checkbox")
-        input(type="checkbox")
-        input(type="checkbox")
-        .bar
-        .score-panel.score-panel__player1
-          p Weedle
-          span.hp
+      div
+        input.clickzone.clickzone--p2(type="checkbox")
+        input.clickzone.clickzone--p2(type="checkbox")
+        input.clickzone.clickzone--p2(type="checkbox")
+        input.clickzone.clickzone--p2(type="checkbox")
+
+        .score-panel__bar.score-panel__bar--p1
+        .score-panel__name.score-panel__name--p1 Weedle
+        .score-panel__hp.score-panel__hp--p1
+          | HP
+          span.score-panel__counter--p1
           | 0/40
 
-      .clickzone.clickzone__player2
-        input(type="checkbox")
-        input(type="checkbox")
-        input(type="checkbox")
-        input(type="checkbox")
-        .bar
-        .score-panel.score-panel__player2
-          p Gastly
-          span.hp
+      div
+        input.clickzone.clickzone--p1(type="checkbox")
+        input.clickzone.clickzone--p1(type="checkbox")
+        input.clickzone.clickzone--p1(type="checkbox")
+        input.clickzone.clickzone--p1(type="checkbox")
+
+        .score-panel__bar.score-panel__bar--p2
+        .score-panel__name.score-panel__name--p2 Gastly
+        .score-panel__hp.score-panel__hp--p2
+          | HP
+          span.score-panel__counter--p2
           | 0/40
 
-      .player1
+      .p1
         .weedle
           .weedle__tail
           .weedle__body.weedle__body--7
@@ -52,7 +56,7 @@ html(lang="en")
             .weedle__nose
             .weedle__horn
 
-      .player2
+      .p2
         .gastly
           .gastly__smoke
             .gastly__smoke__ring.gastly__smoke__ring1
