--- a/src/03-pokemon/index.pug
+++ b/src/03-pokemon/index.pug
@@ -26,6 +26,7 @@ html(lang="en")
           | HP
           span.score-panel__counter--p1
           | 0/40
+        .score-panel__arrow.score-panel__arrow--p1
 
       div
         input.clickzone.clickzone--p1(type="checkbox")
@@ -39,6 +40,7 @@ html(lang="en")
           | HP
           span.score-panel__counter--p2
           | 0/40
+        .score-panel__arrow.score-panel__arrow--p2
 
       .p1
         .weedle
