--- a/src/03-pokemon/index.pug
+++ b/src/03-pokemon/index.pug
@@ -19,6 +19,10 @@ html(lang="en")
         input.clickzone.clickzone--p2(type="checkbox")
         input.clickzone.clickzone--p2(type="checkbox")
 
+        .attack-p1.attack-p1--1
+        .attack-p1.attack-p1--2
+        .attack-p1.attack-p1--3
+
         .score-panel__arrow.score-panel__arrow--p1
         .score-panel__bar-outer.score-panel__bar-outer--p1
         .score-panel__bar-inner.score-panel__bar-outer--p1
@@ -31,6 +35,10 @@ html(lang="en")
         input.clickzone.clickzone--p1(type="checkbox")
         input.clickzone.clickzone--p1(type="checkbox")
         input.clickzone.clickzone--p1(type="checkbox")
+
+        .attack-p2.attack-1--p2
+        .attack-p2.attack-2--p2
+        .attack-p2.attack-3--p2
 
         .score-panel__arrow.score-panel__arrow--p2
         .score-panel__bar-outer.score-panel__bar-outer--p2
