--- a/src/03-pokemon/styles.css
+++ b/src/03-pokemon/styles.css
@@ -157,6 +157,7 @@ body {
 /****************
  * Scoring Logic
  ****************/
+
 ::root {
   counter-reset: p1-score, p2-score;
 }
@@ -216,4 +217,54 @@ input.clickzone--p2[type='checkbox']:checked {
   border-radius: 20px;
   height: 20px;
   width: 333px;
+}
+
+/***************
+ * Attack Logic
+ ***************/
+
+@keyframes attack-p1 {
+  0% {
+    opacity: 0;
+    height: 40px;
+  }
+  30% {
+    opacity: 1;
+    height: 500px;
+    transform: rotate(50deg);
+  }
+  70% {
+    opacity: 1;
+    height: 500px;
+    transform: rotate(70deg);
+  }
+  100% {
+    opacity: 0;
+    height: 40px;
+  }
+}
+.attack-p1 {
+  opacity: 0;
+  top: 245px;
+  position: absolute;
+  right: 174px;
+  height: 40px;
+  width: 30px;
+  background-color: #e23447;
+  z-index: 1;
+  border-radius: 149px 5px 50px 96px;
+  transform-origin: top;
+  transform: rotate(50deg);
+}
+
+:checked + :checked + :checked ~ .attack-p1--1 {
+  animation: attack-p1 1s;
+}
+
+:not(:checked) + :checked + :checked ~ .attack-p1--2 {
+  animation: attack-p1 1s;
+}
+
+:not(:checked) + :not(:checked) + :checked ~ .attack-p1--3 {
+  animation: attack-p1 1s;
 }
