--- a/src/03-pokemon/index.pug
+++ b/src/03-pokemon/index.pug
@@ -9,10 +9,11 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1")
 
   body
-    // audio(autoplay controls)
-    //   source(src="pokemon.opus" type="audio/ogg")
 
     .battlefield
+
+      audio(autoplay controls)
+        source(src="pokemon.opus" type="audio/ogg")
 
       .p1
         .weedle
