Fix background color & use :root instead of ::root
The background color is really just a fallback but it is visible when
overscrolling on a mac

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
-::root {
+:root {
   counter-reset: exercise;
 }
 
 body {
-  background-color: #00d5ff;
+  background-color: #376f7a;
   background-image: linear-gradient(
     45deg,
     #23474e 0%,
