A 120 Collin Street and Flinders Street Station
This is not finished :'( ran out of time.

Things left to do would be:
  - Add more iconic buildings
    - Rialto
    - Melbourne Star
    - Bolte Bridge
    - Crown
    - Bourke Place
  - Put simple generic towers as a background (flat colors)
  - Animate some stuff
    - Flames from Crown
    - Melbourne Star spinning
    - Eureka Skydeck

--- a/src/index.pug
+++ b/src/index.pug
@@ -30,3 +30,7 @@ html(lang="en")
       a.exercise(href="03-pokemon")
         img.exercise__thumbnail(src="03-pokemon/thumb.jpg")
         .exercise__text Pokemon
+
+      a.exercise(href="04-city")
+        img.exercise__thumbnail(src="04-city/thumb.jpg")
+        .exercise__text City
