--- a/src/04-city/styles.css
+++ b/src/04-city/styles.css
@@ -1,83 +1,12 @@
-div {
+div,
+div::before,
+div::after {
   position: absolute;
 }
 
-.eureka {
-  position: relative;
-  height: 300px;
-  width: 80px;
+.skyline {
+  display: flex;
+  width: 100vw;
+  justify-content: space-around;
+  background-color: #efefef;
 }
-
-.eureka__1 {
-  background-color: #354d63;
-  height: 290px;
-  width: 70px;
-  left: 5px;
-  top: 10px;
-}
-
-.eureka__2 {
-  background-color: #476682;
-  height: 200px;
-  width: 40px;
-  bottom: 0;
-}
-
-.eureka__3 {
-  background-color: #27333e;
-  height: 280px;
-  width: 5px;
-  bottom: 0;
-  right: 0;
-}
-
-.eureka__head {
-  background-color: #f4d9b4;
-  height: 50px;
-  width: 35px;
-  top: 0;
-  right: 5px;
-}
-
-.eureka__highlight {
-  background-color: red;
-  height: 40px;
-  width: 3px;
-  top: 30px;
-  right: 13px;
-}
-
-.eureka__triangle {
-  width: 20px;
-  height: 20px;
-  border-top: 90px solid #27333e;
-  border-right: 30px solid transparent;
-  left: 5px;
-  top: 10px;
-}
-
-.eureka__triangle-small {
-  width: 0;
-  height: 0;
-  border-top: 35px solid #27333e;
-  border-right: 10px solid transparent;
-  left: 45px;
-  top: 10px;
-}
-
-/* .flinders { */
-/*   position: relative; */
-/* } */
-
-/* .flinders__main-dome { */
-/*   height: 100px; */
-/*   width: 200px; */
-/*   background-color: green; */
-/*   border-radius: 200px 200px 0 0; */
-/* } */
-/* .flinders__main { */
-/*   position: absolute; */
-/*   height: 400px; */
-/*   width: 200px; */
-/*   background-color: yellow; */
-/* } */
